@@ -25,6 +25,34 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|query
+operator|.
+name|ColumnSelect
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|query
+operator|.
+name|ObjectSelect
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|rop
 operator|.
 name|ROPSerializationService
@@ -505,6 +533,98 @@ decl_stmt|;
 name|assertCorrectness
 argument_list|(
 name|clientTable2
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testColumnQuerySerialization
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ColumnSelect
+argument_list|<
+name|String
+argument_list|>
+name|select
+init|=
+name|ObjectSelect
+operator|.
+name|columnQuery
+argument_list|(
+name|ClientMtTable1
+operator|.
+name|class
+argument_list|,
+name|ClientMtTable1
+operator|.
+name|GLOBAL_ATTRIBUTE
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|data
+init|=
+name|serverService
+operator|.
+name|serialize
+argument_list|(
+name|select
+argument_list|)
+decl_stmt|;
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+name|ColumnSelect
+argument_list|<
+name|Integer
+argument_list|>
+name|clone
+init|=
+operator|(
+name|ColumnSelect
+argument_list|<
+name|Integer
+argument_list|>
+operator|)
+name|serverService
+operator|.
+name|deserialize
+argument_list|(
+name|data
+argument_list|,
+name|ColumnSelect
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ClientMtTable1
+operator|.
+name|GLOBAL_ATTRIBUTE
+operator|.
+name|getExpression
+argument_list|()
+argument_list|,
+name|clone
+operator|.
+name|getColumns
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+operator|.
+name|next
+argument_list|()
+operator|.
+name|getExpression
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
