@@ -232,7 +232,13 @@ comment|/**      * Constructs a new property with the given name and expression 
 annotation|@
 name|SuppressWarnings
 argument_list|(
+block|{
 literal|"unchecked"
+block|,
+literal|"Convert2Lambda"
+block|,
+literal|"Anonymous2MethodRef"
+block|}
 argument_list|)
 specifier|protected
 name|BaseProperty
@@ -258,6 +264,7 @@ name|name
 operator|=
 name|name
 expr_stmt|;
+comment|// can't use lambda here, see CAY-2635
 if|if
 condition|(
 name|expression
@@ -269,14 +276,30 @@ name|this
 operator|.
 name|expressionSupplier
 operator|=
+operator|new
+name|Supplier
+argument_list|<
+name|Expression
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Expression
+name|get
 parameter_list|()
-lambda|->
+block|{
+return|return
 name|ExpressionFactory
 operator|.
 name|pathExp
 argument_list|(
 name|name
 argument_list|)
+return|;
+block|}
+block|}
 expr_stmt|;
 block|}
 else|else
@@ -285,9 +308,28 @@ name|this
 operator|.
 name|expressionSupplier
 operator|=
+operator|new
+name|Supplier
+argument_list|<
+name|Expression
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Expression
+name|get
+parameter_list|()
+block|{
+return|return
 name|expression
-operator|::
+operator|.
 name|deepCopy
+argument_list|()
+return|;
+block|}
+block|}
 expr_stmt|;
 block|}
 name|this
